kubernetes/preprod-shared/keycloak/keycloak.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: preprod-shared
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 8443
      name: https
  selector:
    app: keycloak

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: preprod-shared
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "https"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: keycloak.preprod.zevrant-services.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: https
  ingressClassName: nginx

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: preprod-shared
  labels:
    app: keycloak
spec:
  #  Additional config is needed to switch to HA mode
  replicas: 3
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "Always"
      volumes:
        - name: keycloak-cert
          secret:
            secretName: keycloak-tls
      imagePullSecrets:
        - name: harbor-ro
      containers:
        - name: keycloak
          image: harbor.zevrant-services.com/quay/keycloak/keycloak:latest
          imagePullPolicy: Always
          command:
            - /bin/sh
          args:
            - -c
            - /opt/keycloak/bin/kc.sh start
          volumeMounts:
            - name: keycloak-cert
              mountPath: /opt/acme/certs/
          ports:
            - containerPort: 8443
          startupProbe:
            httpGet:
              scheme: HTTPS
              path: /health/ready
              port: 8443
            periodSeconds: 5
            failureThreshold: 16 #max of 80 seconds
            successThreshold: 1
          livenessProbe:
            httpGet:
              scheme: HTTPS
              path: /health/live
              port: 8443
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
